# zmq_logger

./: License.txt  LoggerClient.py  LoggerServer.py  README.md  client.py  pyproject.toml  requirements.txt  server.py
examples/: client.py  server.py
src/zmq_logger/: LoggerClient.py  LoggerServer.py
